# jupyter-scheduler

./: .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .stylelintrc  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml  e2e-tests.yml  update-integration-tests.yml
api/: openapi.yaml
binder/: environment.yml  postBuild
dev/: seed.py
dev/templates/: 1.ipynb  2.ipynb  3.ipynb
docs/: conf.py  index.md
docs/contributors/: index.md
docs/developers/: index.md
docs/operators/: index.md
docs/users/: index.md
json-schema/: exampleWorkflow.json  workflow.schema.json
jupyter-config/nb-config/: jupyter_scheduler.json
jupyter-config/server-config/: jupyter_scheduler.json
jupyter_scheduler/: __init__.py  _version.py  config.py  download_manager.py  download_runner.py  environments.py  exceptions.py  executors.py  extension.py  handlers.py  job_files_manager.py  managers.py  models.py  orm.py  output_files_manager.py  parameterize.py  scheduler.py  task_runner.py  utils.py  workflow_runner.py  workflows.py
jupyter_scheduler/pydantic_v1/: __init__.py  main.py
jupyter_scheduler/tests/: __init__.py  mocks.py  test_execution_manager.py  test_handlers.py  test_job_files_manager.py  test_orm.py  test_scheduler.py  utils.py
jupyter_scheduler/tests/static/: helloworld.ipynb  import-helloworld.ipynb
jupyter_scheduler/tests/test_staging_dir/job-1/: helloworld-1.ipynb
jupyter_scheduler/tests/test_staging_dir/job-3/: output_side_effect.txt
jupyter_scheduler/tests/test_staging_dir/job-4/: side_effects.ipynb
schema/: plugin.json
src/: advanced-options.tsx  context.ts  create-job-form.tsx  custom-environment.tsx  handler.ts  hooks.ts  index.ts  index.tsx  model.ts  notebook-jobs-panel.tsx  size.ts  theme-provider.ts  tokens.ts
src/__tests__/: jupyter_scheduler.spec.ts
src/components/: box.tsx  button-bar.tsx  button.tsx  cluster.tsx  collapsible-panel.tsx  compute-type-picker.tsx  confirm-buttons.tsx  confirm-delete-button.tsx  confirm-delete-icon.tsx  confirm-dialog-buttons.tsx  confirm-icons.tsx  create-job-form-inputs.tsx  create-schedule-options.tsx  delete-with-confirmation-button.tsx  delete-with-confirmation-icon.tsx  environment-picker.tsx  error-boundary.tsx  files-directory-link.tsx  heading.tsx  icon-buttons.tsx  icons.ts  input-file-snapshot.tsx  input-folder-checkbox.tsx  job-definition-row.tsx  job-details.tsx  job-file-link.tsx  job-row.tsx  labeled-value.tsx  mlflow-checkbox.tsx  notebook-jobs-list.tsx  notebook-jobs-navigation-tab-list.tsx  notebook-jobs-navigation-tab.tsx  notebook-jobs-navigation.tsx  notification-config.tsx  notification-detail.tsx  notification-picker.tsx  notifications-config-detail.tsx  notifications-config.tsx  notifications-picker.tsx  output-format-picker.tsx  (+5 more)
src/components/advanced-table/: advanced-table-header.tsx  advanced-table.tsx  index.tsx
src/dag-scheduler/: contants.ts  context-provider.tsx  context.ts  handler.ts  hooks.ts  index.ts  model.ts  theme-provider.ts  tokens.ts  widget.tsx
src/dag-scheduler/components/: async-action-handler.ts  async-button.tsx  badge-chip.tsx  breadcrumbs.tsx  confirm-buttons.tsx  confirmation-dialog.tsx  create-schedule-options.tsx  drop-zone.tsx  error-boundary.tsx  external-links.tsx  file-preview.tsx  icons.ts  job-definition-row.tsx  job-row.tsx  json-editor.tsx  parameters-picker.tsx  run-status.tsx  schedule-inputs.tsx  schedule-summary.tsx  split-button.tsx  status-badge.tsx  table-filter.tsx  task-dependency.tsx  task-status.tsx  view-parameters.tsx
src/dag-scheduler/components/advanced-table/: advanced-table.tsx
src/dag-scheduler/components/auto-suggestion/: focusable.tsx  index.tsx  input.tsx  navigable-list.tsx  pill.tsx  pills.tsx
src/dag-scheduler/components/forms/: checkbox-list.tsx  date-input.tsx  select-box.tsx  text-field.tsx
src/dag-scheduler/components/styled/: drawer.tsx  index.tsx
src/dag-scheduler/components/workflow-editor/: connection-line.tsx  custom-edge.tsx  custom-node.tsx  task-run-node.tsx
src/dag-scheduler/hooks/: useDebounce.ts  useOnClickOutside.ts  usePrevious.ts
src/dag-scheduler/layout/: elkjs.ts
src/dag-scheduler/mainviews/: create-workflow-view.tsx  create-workflow.tsx  job-definition-detail.tsx  job-definitions-list.tsx  job-run-detail.tsx  job-runs-list.tsx  run-job-form.tsx  run-view.tsx  task-detail.tsx  task-run-detail.tsx  task-view.tsx  update-task.tsx  update-workflow.tsx  workflows.tsx
src/dag-scheduler/mocks/: handler.ts  job-definition.ts  job-definitions.ts  job-run.ts  job-runs.ts  namespaces.ts
src/dag-scheduler/store/: index.ts  store-provider.tsx  utils.ts
src/dag-scheduler/templates/: list.tsx  side-panel.tsx  split-view.tsx
src/dag-scheduler/types/: index.ts
src/dag-scheduler/util/: filters.tsx  index.ts  job-name-validation.tsx  task-timeout-validation.tsx  toast-decorator.ts
src/mainviews/: create-job-from-definition.tsx  create-job-from-job-definition.tsx  create-job.tsx  detail-view.tsx  edit-job-definition.tsx  job-definition.tsx  job-detail.tsx  list-jobs.tsx
src/mainviews/detail-view/: detail-view.tsx  index.tsx  job-definition.tsx  job-detail.tsx
src/util/: errors.tsx  job-name-validation.tsx
src/workflows/: interfaces.ts  workflowDoc.ts  workflowModel.ts  workflowWidgetFactory.ts
src/workflows/schema/: workflow.schema.json
style/: autosuggest.css  base.css  box.css  button.css  cluster.css  collapsible-panel.css  edit-job-definitions.css  heading.css  labeled-value.css  loader.css  stack.css  variables.css  workflows.css
ui-tests/: .yarnrc  jupyter_server_test_config.py  package.json  playwright.config.js
ui-tests/helpers/: SchedulerHelper.ts
ui-tests/tests/: jupyter_scheduler.spec.ts
