[build-system]
requires = ["hatchling>=1.3.1", "jupyterlab~=3.1"]
build-backend = "hatchling.build"

[project]
name = "jupyter_scheduler"
version = "1.1.5"
description = "A JupyterLab extension for running notebook jobs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Project Jupyter" },
]
keywords = ["Jupyter", "JupyterLab", "JupyterLab3"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "jupyter_server>=1.6,<3",
    "traitlets",
    "nbconvert",
    "pydantic~=1.10",
    "sqlalchemy<2",
    "croniter",
    "pytz",
    "fsspec",
    "s3fs",
    "psutil"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "jupyter_server[test]>=1.6,<3",
]
dev = [
    "click"
]

[project.urls]
Homepage = "https://github.com/jupyter-server/jupyter-scheduler"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.hatch.build]
artifacts = ["jupyter_scheduler/labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_scheduler/labextension" = "share/jupyter/labextensions/@jupyterlab/scheduler"
"install.json" = "share/jupyter/labextensions/jupyter_scheduler/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_scheduler/labextension/static/style.js",
    "jupyter_scheduler//labextension/package.json",
]
skip-if-exists = ["jupyter_scheduler/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyter_scheduler/labextension"

[tool.tbump.version]
current = "1.1.5"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""

[[tool.tbump.file]]
src = "jupyter_scheduler/_version.py"
version_template = '({major}, {minor}, {patch}, "{channel}", "{release}")'

[[tool.tbump.file]]
src = "package.json"
search = '"version": "{current_version}"'

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.field]]
name = "channel"
default = ""

[[tool.tbump.field]]
name = "release"
default = ""

[tool.black]
line_length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore:There is no current event loop:DeprecationWarning",
  "module:make_current is deprecated:DeprecationWarning",
  "module:clear_current is deprecated:DeprecationWarning",
  "module:There is no current event loop:DeprecationWarning",
  "ignore:Passing a schema to Validator.iter_errors:DeprecationWarning",
  "ignore:unclosed <socket.socket:ResourceWarning",
  "ignore:unclosed event loop:ResourceWarning",
  "ignore:run_pre_save_hook is deprecated:DeprecationWarning"
]

[tool.jupyter_releaser]
skip = ["check-links"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true
show_error_context = true
show_error_codes = true
strict_equality = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.check-manifest]
ignore = ["binder/**", "packages/**", "*.json", "*.png", "yarn.lock", ".*", "jupyter_scheduler/labextension/**", "jupyter_scheduler/static/**"]
